<resources>
    <string name="app_name">Instagram</string>
    <string name="label">Instagram</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="log">Log In</string>
    <string name="logF">Log In Facebook</string>
    <string name="registro">Registrar</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="celular">Celular</string>
    <string name="registrate">¿No tienes cuenta? Registrate</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>