<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="99dp"
        android:fontFamily="@font/dancin_normal"
        android:text="@string/label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addusu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:hint="@string/usuario"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Usuario"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:hint="@string/contraseña"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Confir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Contraseña"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addconfir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:hint="@string/confirmar"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Confir"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/gris">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:inputType="number"
            android:hint="@string/celular"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Celular"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/azul"
        android:text="@string/registro"
        android:textSize="15sp" />

</RelativeLayout>