<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/dancin_normal"
        android:text="@string/label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Usuario"
        android:layout_width="304dp"
        android:layout_height="71dp"
        android:textColorHint="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintVertical_bias="0.082">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addusu"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/borde" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Contraseña"
        android:layout_width="307dp"
        android:layout_height="68dp"
        android:textColorHint="@color/gris"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usuario"
        app:layout_constraintVertical_bias="0.032">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registrate"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/registrate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contraseña"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login"
        android:layout_width="195dp"
        android:layout_height="51dp"
        android:layout_below="@+id/Contraseña"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/azul"
        android:text="@string/log"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrate"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="-----------------------------   OR   -----------------------------"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/loginF"
        android:layout_width="198dp"
        android:layout_height="50dp"
        android:layout_below="@+id/or"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/trans"
        android:text="@string/logF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintVertical_bias="0.062" />

</androidx.constraintlayout.widget.ConstraintLayout>
